--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "nodemon": "^2.0.5",
     "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
