--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "devDependencies": {
     "@types/node": "^14.11.8",
     "eslint-config-prettier": "^6.12.0",
@@ -11,8 +12,9 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "nodemon",
-    "lint": "eslint . --ext .ts --fix"
+    "build": "nodemon",
+    "lint": "eslint . --ext .ts --fix",
+    "start": "node"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.4.1",
