change my project to target ESNext and also to use ESNext module system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
-        "module": "ESNext",
-        "esModuleInterop": true,
         "target": "ESNext",
+        "module": "ESNext",
         "moduleResolution": "node",
+        "esModuleInterop": true,
         "sourceMap": true,
-        "outDir": "dist"
-    }
+        "outDir": "./dist",
+    },
+    "include": [
+        "./src"
+    ],
 }
